--- a/style.css
+++ b/style.css
@@ -119,24 +119,15 @@ body {
   row-gap: 3rem;
 }
 
-.footer-items,
-#pv-meetings,
-.pv-meetings,
-.latest-news {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
-  grid-auto-flow: row;
-  grid-auto-rows: auto;
-  align-items: flex-start;
-  grid-gap: 2rem;
-}
 
 .latest-news {
   grid-gap: 2rem;
   width: 100%;
-  height: auto;
+  display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr)) !important;
+  grid-auto-flow: row;
+  grid-auto-rows: auto;
+  align-items: flex-start;
   padding: 4rem;
   background-color: var(--bgColor);
 }
@@ -144,10 +135,12 @@ body {
 .single-news {
   padding: 0rem 0.5rem;
   background-color: var(--bgColor);
-  width: 100%;
   height: 35rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   row-gap: 1rem;
   border-radius: 1rem;
   object-fit: contain;
@@ -177,13 +170,6 @@ footer {
   text-align: center;
 }
 
-@media screen and (max-width: 700px) {
-  .closer {
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-}
 
 @media screen and (max-width: 1024px) {
   body {
@@ -196,5 +182,12 @@ footer {
 
   p {
     text-align: center;
+  }
+
+  .latest-news{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+
   }
 }
